[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cavsiopy"
version = "0.9.6"
authors = [
  { name="ceren", email="ceren.eyiguler@usask.ca" },
]
description = "A package to calculate and visualize spacecraft instrument orientation"
readme = "README.md"
requires-python = ">=3.4"
license = { file = "LICENSE.md" }

install_requires = [
    "matplotlib",
    "cartopy",
    "numpy",
    "astropy",
    "h5py",
    "geopy",
    "spacepy",
    "pysofa == 0.1.1" ]
    
classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Science/Research",
   "License :: OSI Approved :: MIT License",
   "Programming Language :: Python",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.6",
   "Programming Language :: Python :: 3.7",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3 :: Only",
   "Topic :: Scientific/Engineering",
   "Topic :: Scientific/Engineering :: Visualization",
   "Topic :: Utilities",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cosmocer/cavsiopy"
"Repository" = "https://github.com/cosmocer/cavsiopy"
"Bug Tracker" = "https://github.com/cosmocer/cavsiopy/issues"
"Documentation" = "https://readthedocs.org/projects/cavsiopy/"




