[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cavsiopy"
version = "1.1.0"
authors = [
  { name="ceren", email="ceren.eyiguler@usask.ca" },
  { name = "Warren Holley"}, 
  { name = "Andrew D. Howarth"}, 
  { name = "Donald W. Danskin"}, 
  { name = "Kuldeep Pandey"}, 
  { name = "Carley J. Martin"}, 
  { name = "Glenn C. Hussey"}, 
  { name = "Robert Gillies"}, 
  { name = "Andrew W. Yau"},
]
description = "A Python package to Calculate and Visualize Spacecraft Instrument Orientation"
readme = "README.md"
requires-python = ">=3.4"
license = { file = "LICENSE" }

install_requires = [
    "matplotlib",
    "cartopy",
    "numpy",
    "astropy",
    "h5py",
    "geopy",
    "pysofa2" ]
    
classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Science/Research",
   "License :: OSI Approved :: MIT License",
   "Programming Language :: Python",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.6",
   "Programming Language :: Python :: 3.7",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3 :: Only",
   "Topic :: Scientific/Engineering",
   "Topic :: Scientific/Engineering :: Visualization",
   "Topic :: Utilities",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/icebearcanada/cavsiopy"
"Repository" = "https://github.com/icebearcanada/cavsiopy"
"Bug Tracker" = "https://github.com/icebearcanada/cavsiopy/issues"
"Documentation" = "https://readthedocs.org/projects/cavsiopy/"
